[package]
name = "local-tls-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.12", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3.3", features = ["tls"] }
warp-reverse-proxy = "0.5"
